# pg_count_roles

./: .gitignore  Makefile  README.md  meson.build  pg_count_roles--1.0.sql  pg_count_roles.c  pg_count_roles.control
t/: 001_pg_count_roles.pl
